SERVER-6499 Clarify compact's index build perparation logic.